Adicionei um novo paragrafo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Paragrafo</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam exercitationem, ducimus ex voluptates architecto similique magnam quidem quod? Quos ea iure numquam ipsa nobis porro, obcaecati commodi distinctio dolore modi?</p>
     <p>teste</p>
+    <p>novo paragrafo de commit</p>
 </body>
 </html>
