--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Git</title>
 </head>
 <body>
-    <h1>Ja aprendi sobre Git add</h1>
+    <h1>Ja aprendi sobre Git commit</h1>
     <p>Paragrafo</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam exercitationem, ducimus ex voluptates architecto similique magnam quidem quod? Quos ea iure numquam ipsa nobis porro, obcaecati commodi distinctio dolore modi?</p>
     <p>teste</p>
     <p>novo paragrafo de commit</p>
+    <p>terceiro commit</p>
 </body>
 </html>
