Ajuste na pagina index e adicinando ex001

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    <h1>Ja aprendi sobre Git commit</h1>
-    <p>Paragrafo</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam exercitationem, ducimus ex voluptates architecto similique magnam quidem quod? Quos ea iure numquam ipsa nobis porro, obcaecati commodi distinctio dolore modi?</p>
-    <p>teste</p>
-    <p>novo paragrafo de commit</p>
-    <p>terceiro commit</p>
+    <h1>Projetos Desenvolvidos no Senai Barueri</h1>
+    <p>Click aqui para ir ao <a href="ex001.html">Ex001</a></p>
 </body>
 </html>
